--- a/SoNewCmd/SoNewCmd.vcproj
+++ b/SoNewCmd/SoNewCmd.vcproj
@@ -174,7 +174,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\injectionmethod_crtll.cpp"
+				RelativePath=".\injectorcrtll.cpp"
 				>
 			</File>
 			<File
@@ -212,11 +212,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\injectionmethod_crtll.h"
+				RelativePath=".\injector.h"
 				>
 			</File>
 			<File
-				RelativePath=".\injector.h"
+				RelativePath=".\injectorcrtll.h"
 				>
 			</File>
 			<File
